L6Z2 - poprawa